revisão das conclusões e do apêndice

--- a/inst/book/assets/tex/template.tex
+++ b/inst/book/assets/tex/template.tex
@@ -419,6 +419,7 @@ Captchas, or Completely Automated Public Turing tests to tell Computers and Huma
    JPEG & Join Photographic Experts Groups\\
    GAN & Generative Adversarial Networks\\
    GPT & Generative Pre-Training Transformer\\
+   GPU & Graphical Processing Unit\\
    JUCESP & Junta Comercial de São Paulo\\
    LAI & Lei de Acesso à Informação\\
    ICMC & Instituto de Ciências Matemáticas e de Computação\\
