arrumando labels das secoes

--- a/inst/book/conclusoes.qmd
+++ b/inst/book/conclusoes.qmd
@@ -1,4 +1,4 @@
-# Conclusões {#conclusao}
+# Conclusões {#sec-conclusao}
 
 \epigrafe{Even robots need a break from the daily grind of solving captchas.}{ChatGPT}
 
